WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306303
-[TestWKWebView firstLayerWithName:] does not respect layerName argument
https://bugs.webkit.org/show_bug.cgi?id=306303
Summary
-[TestWKWebView firstLayerWithName:] does not respect layerName argument
Abrar Rahman Protyasha
Reported
2026-01-26 16:28:31 PST
And instead always compares against "Gesture Swipe Snapshot Layer", which, coincidentally, is the only test case using this utility right now.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-26 16:28:38 PST
<
rdar://problem/168956602
>
Abrar Rahman Protyasha
Comment 2
2026-01-26 16:47:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57298
EWS
Comment 3
2026-01-26 17:26:46 PST
Committed
306255@main
(dd9c107b5dd9): <
https://commits.webkit.org/306255@main
> Reviewed commits have been landed. Closing PR #57298 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug