-[TestWKWebView firstLayerWithName:] does not respect layerName argument https://bugs.webkit.org/show_bug.cgi?id=306303 rdar://168956602

Reviewed by Lily Spiniolas.

This utility was introduced in 297248@main and instead of comparing
layer names against the provided argument, it always compared against
"Gesture Swipe Snapshot Layer", which, coincidentally, is the only test
case using this utility so far.

We will use this test utility to test a fix for webkit.org/b/306305.

* Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[WKWebView firstLayerWithName:]):

Canonical link: https://commits.webkit.org/306255@main